--- a/index.html
+++ b/index.html
@@ -37,14 +37,27 @@
 			<div class="common_title large">projects</div>
                 <div class="common_project_card">
                     <table><tr>
-                        <td><div class="common_text large">Foot<br>Retargeting</div></td>
-                        <td style="padding-left:40px;"><iframe width="560" height="315" src="https://www.youtube.com/embed/r4JCK32CUhY?si=F9IEfsejZRxq5RJh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+                        <td>
+                            <div class="common_text large">Foot</div>
+                            <div class="common_text large">Retargeting</div>
+                            <br>
+                            <div class="common_text small">Left: before foot ground/stable filter.</div>
+                            <div class="common_text small">Right: after foot ground/stable filter.</div>
+                        </td>
+                        <td style="padding-left:40px; width:50%;"><iframe width="560" height="315" src="https://www.youtube.com/embed/r4JCK32CUhY?si=F9IEfsejZRxq5RJh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
                     </tr></table>
                 </div>
                 <div class="common_project_card">
                     <table><tr>
-                        <td><div class="common_text large">Hand<br>Retargeting</div></td>
-                        <td style="padding-left:40px;"><iframe width="560" height="315" src="https://www.youtube.com/embed/ciLCF1gGVTk?si=njBcR1JzE1ACfrIx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
+                        <td>
+                            <div class="common_text large">Hand</div>
+                            <div class="common_text large">Retargeting</div>
+                            <br>
+                            <div class="common_text small">Top: before double hand optimization.</div>
+                            <div class="common_text small">Bottom: after double hand optimization.</div>
+                            <div class="common_text small">Data from innerhand.</div>
+                        </td>
+                        <td style="padding-left:40px; width: 50%;"><iframe width="560" height="315" src="https://www.youtube.com/embed/ciLCF1gGVTk?si=njBcR1JzE1ACfrIx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
                     </tr></table>
                 </div>
 		</div>
