--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-	<title>Tiny Night' Home</title>
+	<title>Chengming Liu's github page</title>
 	<link rel="stylesheet" href="./common.css" type="text/css"></link>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
